# rust-cruncher-munchers

./: Cargo.toml  README.md
assets/models/: README.md  bob.glb  cruncher.glb  platform.glb  ross.glb
src/: main.rs
